[package]
name = "graft-hook"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.8.8"
# Async runtime (needed for the server and running scripts)
tokio = { version = "1.48.0", features = ["full"] }
# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
# Native HTTPS support (optional - see below)
axum-server = { version = "0.8.0", features = ["tls-rustls"] }

# High-performance native crates
bollard = "0.18" # Native Docker API
git2 = "0.20"    # Native Git implementation
dotenvy = "0.15.7"
futures-util = "0.3.31"
