[package]
name = "graft-hook"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.8.8"
# Async runtime (needed for the server and running scripts)
tokio = { version = "1.48.0", features = ["full"] }
# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
# Native HTTPS support (optional - see below)
axum-server = { version = "0.8.0", features = ["tls-rustls"] }

# High-performance native crates
dotenvy = "0.15.7"
tracing = "0.1"
tracing-subscriber = "0.3"

# Cryptography for signature verification
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"